--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,3 +15,26 @@
     background-color: #C3EBFA  !important;
     color: black !important;
 }
+
+.rbc-btn-group:first-child{
+    display: none !important;
+}
+.rbc-toolbar-label{
+    text-align: right !important;
+    padding: 0px 20px !important;
+}
+
+.rbc-btn-group:last-child{
+    font-size: 13px !important;
+}
+
+.rbc-btn-group:last-child button{
+    border:none !important;
+    background-color: #f1f0ff !important;
+    margin-left: 2px;
+}
+
+.rbc-toolbar button.rbc-active{
+    background-color: #dbdafe !important;
+    box-shadow: none !important;
+}
