finishing teacher page and parent page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,3 +38,43 @@
     background-color: #dbdafe !important;
     box-shadow: none !important;
 }
+
+.rbc-time-view{
+    border-color: #eee !important;
+}
+
+.rbc-time-header{
+    display: none !important;
+}
+
+.rbc-time-content{
+    border: none !important;
+}
+
+.rbc-time-gutter.rbc-time-column{
+    font-size: 12px !important;
+}
+
+.rbc-time-gutter.rbc-time-column.rbc-timeslot-group{
+    padding: 0px 20px !important;
+}
+
+.rbc-timeslot-group{
+    background-color: #f7fdff !important;
+}
+
+.rbc-day-slot{
+    font-size: 14px !important;
+}
+
+.rbc-event{
+    border: none !important;
+    color: black !important;
+    padding: 10px !important;
+    margin: 10px !important;
+    width: 99%;
+}
+
+.rbc-event:nth-child(1){
+    background-color: #e2f8ff !important;
+}
